2010-09-27  Michael Saboff  <msaboff@apple.com>

        Reviewed by Geoffrey Garen.

        Changed the initialization of JSArray objects to have space for 
        3 elements for the constructor that takes a ArgList argument.
        This improves v8-deltablue performance by about 2.8% by reducing 
        the number of realloc() calls.
        https://bugs.webkit.org/show_bug.cgi?id=46664

        * runtime/JSArray.cpp:
        (JSC::JSArray::JSArray):

2010-09-27  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Darin Adler.

        Bug 46680 - Inlining string concatenation can regress interpreter performance
        <rdar://problem/8362752> REGRESSION: ~6.4% sunspider regression in interpreter
        Do not inline calls to string concatenation in the interpret loop.

        * interpreter/Interpreter.cpp:
        (JSC::concatenateStrings):
        (JSC::Interpreter::privateExecute):

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Fix thinko.

        * runtime/JSCell.h:

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Try to fix Windows build.

        * runtime/JSCell.h:
        (JSC::MSVCBugWorkaround::MSVCBugWorkaround):
        (JSC::MSVCBugWorkaround::~MSVCBugWorkaround):

2010-09-27  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Darin Adler.

        Add operator == for AtomicString and Vector<Uchar>
        https://bugs.webkit.org/show_bug.cgi?id=46509

        * JavaScriptCore.exp:
        * wtf/text/AtomicString.cpp:
        (WTF::operator==):
        * wtf/text/AtomicString.h:
        (WTF::operator==):
        (WTF::operator!=):

2010-09-27  Anders Carlsson  <andersca@apple.com>

        Try to fix the Windows build.

        * wtf/Noncopyable.h:

2010-09-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Alexey Proskuryakov and Adam Barth.

        Add WTF_MAKE_NONCOPYABLE macro
        https://bugs.webkit.org/show_bug.cgi?id=46589
