@@ -1,3 +1,13 @@
+2010-09-28  İsmail Dönmez  <ismail@namtrac.org>
+
+        Reviewed by Andreas Kling.
+
+        Test for WINCE instead of WINCEBASIC, compiler always defines WINCE.
+        Remove reference to unexisting path JavaScriptCore/os-wince.
+
+        * JavaScriptCore.pri:
+        * wtf/Assertions.cpp:
+
 2010-09-27  Michael Saboff  <msaboff@apple.com>
 
         Reviewed by Geoffrey Garen.
